<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ae03ff"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:orientation="vertical"
        android:gravity="center" >

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enterNamesText"
            android:textSize="26sp"
            android:textStyle="bold"
            android:gravity="center"
            android:textColor="#FFA500"
            android:fontFamily="@font/halloween" />

        <TextView
            android:id="@+id/currentPlayer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/halloween"
            android:gravity="center"
            android:text="@string/playerAs"
            android:textColor="#FFA500"
            android:textSize="22dp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:gravity="center" >

        <TextView
            android:id="@+id/playerOne"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minHeight="50dp"
            android:layout_weight="1"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_gravity="center"
            android:gravity="center"
            android:textColor="#FFA500"
            android:fontFamily="@font/halloween"
            android:text="@string/player" />

        <EditText
            android:id="@+id/playerInput"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minHeight="50dp"
            android:layout_weight="1"
            android:ems="10"
            android:textSize="16sp"
            android:textStyle="bold"
            android:gravity="center"
            android:layout_gravity="center"
            android:fontFamily="@font/halloween"
            android:inputType="text"
            android:hint="Name"
            android:textColor="@color/white"
            android:textColorHint="@color/white"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:orientation="horizontal" >

        <ListView
            android:id="@+id/playerList"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:listSelector="#8f00ff" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:orientation="horizontal">

        <Button
            android:id="@+id/saveName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/save"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_marginTop="40dp"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            android:gravity="center"
            android:textColor="@color/white"
            android:backgroundTint="#FF8000"
            android:fontFamily="@font/halloween" />

        <Button
            android:id="@+id/clearName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            android:layout_weight="1"
            android:backgroundTint="#FF8000"
            android:fontFamily="@font/halloween"
            android:gravity="center"
            android:text="@string/clear"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold" />
    </LinearLayout>
</LinearLayout>